Simplify Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
-    "builds": [
-      { "src": "package.json", "use": "@vercel/node" }
-    ],
     "routes": [
-      { "src": "/resume.pdf", "dest": "/Resume_Roy_Joshua_Lasrado.pdf" }
+      { "src": "/Resume_Roy_Joshua_Lasrado.pdf", "dest": "/Resume_Roy_Joshua_Lasrado.pdf" }
     ]
   }
   
